--- a/templates/customer/order_tracking.html
+++ b/templates/customer/order_tracking.html
@@ -260,12 +260,12 @@
 
         // Call Pharmacy
         function callPharmacy() {
-            alert('📞 Calling Frank Ross Pharmacy...\n\nPhone: +91 98765 12345\n\n(In production, this would initiate a phone call)');
+            alert('📞 Calling Frank Ross Pharmacy...\n\nPhone: +91 98765 12345\n\n');
         }
 
         // Get Directions
         function getDirections() {
-            alert('🗺️ Opening Directions...\n\nFrank Ross Pharmacy\n21, Ballygunge Circular Road\nKolkata - 700019\n\n(In production, this would open Google Maps with directions)');
+            alert('🗺️ Opening Directions...\n\nFrank Ross Pharmacy\n21, Ballygunge Circular Road\nKolkata - 700019\n\n');
         }
     </script>
 
