--- a/templates/customer/profile.html
+++ b/templates/customer/profile.html
@@ -238,7 +238,7 @@
                 'help': 'Help & Support'
             };
             
-            alert(`📱 Navigating to ${sectionNames[section]}...\n\n(In production, this would open the respective screen)`);
+            alert(`📱 Navigating to ${sectionNames[section]}...\n\n`);
             
             if (section === 'orders') {
                 // In production: window.location.href = 'my-orders.html';
